--- a/css/header.css
+++ b/css/header.css
@@ -14,7 +14,6 @@ body{
     width: 1200px;
     height: auto;
     margin: 0 auto;
-    background-color: white;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
 }
@@ -29,7 +28,7 @@ a{
 }
 .z-top-bar{
     height: 124px;
-    background-color: #fcfcfc;
+    background-color: white;
     position: relative;
     transition: transform .3s;
     background-size: cover;
@@ -108,6 +107,7 @@ a{
     height: 50px;
     bottom: 20px;
     padding-left: 5px;
+    margin-top: 20px;
 }
 .search-icon{
     width: 10px;
