--- a/css/layout.css
+++ b/css/layout.css
@@ -19,14 +19,15 @@ a, body {
     margin: 8px 0 3px;
     text-transform: capitalize;
     text-decoration: none;
-
 }
+
 
 .header, .main, .footer{
     float:left;
     width: 100%;
-    background-color: beige;
+    background-color: white;
 }
+
 .header-left{
     float: left;
     width: 50px;
